--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.26.0",
     "react": "^16.2.0",
-    "react-test-renderer": "^16.2.0",
+    "react-test-renderer": "^16.2.0"
+  },
+  "dependencies": {
     "tiny-emitter": "^2.0.2",
     "styled-components": "^3.1.4"
   }
