--- a/package.json
+++ b/package.json
@@ -5,20 +5,20 @@
   "main": "dist/index.js",
   "private": false,
   "dependencies": {
+    "tiny-emitter": "^2.0.2"
+  },
+  "devDependencies": {
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-scripts": "1.1.1",
-    "tiny-emitter": "^2.0.2",
-    "styled-components": "^3.2.3"
-  },
-  "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-plugin-styled-components": "^1.5.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "babel-register": "^6.26.0"
+    "babel-register": "^6.26.0",
+    "styled-components": "^3.2.3"
   },
   "scripts": {
     "dev": "react-scripts start",
