--- a/package.json
+++ b/package.json
@@ -5,26 +5,27 @@
   "main": "dist/index.js",
   "private": false,
   "dependencies": {
+    "styled-components": "^3.2.3",
     "tiny-emitter": "^2.0.2"
   },
   "devDependencies": {
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-scripts": "1.1.1",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
-    "babel-plugin-styled-components": "^1.5.0",
+    "babel-loader": "^7.1.4",
+    "babel-plugin-styled-components": "^1.5.1",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.26.0",
-    "styled-components": "^3.2.3"
+    "next": "^5.0.0",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "webpack": "^4.2.0",
+    "webpack-cli": "^2.0.12"
   },
   "scripts": {
-    "dev": "react-scripts start",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "build": "babel src/module -d dist",
+    "dev": "next",
+    "build": "webpack --mode=production",
     "prepare": "npm run build"
   },
   "repository": {
