--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "version": "1.4.1",
   "main": "dist/index.js",
   "private": false,
+  "peerDependencies": {
+    "styled-components": "^3.2.3"
+  },
   "dependencies": {
-    "styled-components": "^3.2.3",
     "tiny-emitter": "^2.0.2"
   },
   "devDependencies": {
@@ -21,6 +23,7 @@
     "next": "^5.0.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "styled-components": "^3.2.3",
     "webpack": "^4.2.0",
     "webpack-cli": "^2.0.12"
   },
