--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "description": "Helpers for setting up main layout with side menus",
   "version": "1.5.1",
   "main": "dist/index.js",
+  "license": "MIT",
   "private": false,
   "peerDependencies": {
     "styled-components": "^3.2.5"
