--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "styled-components": "^3.2.5"
   },
   "dependencies": {
+    "is-callable": "^1.1.3",
     "tiny-emitter": "^2.0.2"
   },
   "devDependencies": {
