--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "private": false,
   "peerDependencies": {
-    "styled-components": "^3.2.5"
+    "styled-components": ">=3.2.5"
   },
   "dependencies": {
     "is-callable": "^1.1.3",
