--- a/package.json
+++ b/package.json
@@ -8,10 +8,7 @@
   "peerDependencies": {
     "styled-components": ">=3.2.5"
   },
-  "dependencies": {
-    "is-callable": "^1.1.3",
-    "tiny-emitter": "^2.0.2"
-  },
+  "dependencies": {},
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
