New changelog format

--- a/.release-it.json
+++ b/.release-it.json
@@ -1,9 +1,12 @@
 {
-  "beforeChangelogCommand": "conventional-changelog -i CHANGELOG.md -s",
-  "changelogCommand": "conventional-changelog | tail -n +3",
-  "safeBump": false,
   "npm": {
     "publish": true,
     "access": "public"
+  },
+  "git": {
+    "changelog": "npx auto-changelog --stdout --commit-limit false -u --template ./changelog.hbs"
+  },
+  "hooks": {
+    "after:bump": "npx auto-changelog -p"
   }
 }
