--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "^5.0.0",
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
+    "release-it": "^12.4.3",
     "styled-components": "^3.2.5",
     "webpack": "^4.2.0",
     "webpack-cli": "^2.0.12"
@@ -29,7 +30,8 @@
   "scripts": {
     "dev": "next",
     "build": "webpack --mode=production",
-    "prepare": "npm run build"
+    "prepare": "npm run build",
+    "release": "release-it"
   },
   "repository": {
     "type": "git",
